# arduboy_bazel

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl
.devcontainer/: Dockerfile  devcontainer.json
bazel/: BUILD.arduinocore_avr  arduboy2.BUILD
example/: BUILD.bazel  main.cpp
toolchain/: BUILD  avr.bzl
